# ghostink

./: .dockerignore  .env  .env.example  Cargo.toml  README.md  cog.toml  devenv.nix
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/.sqlx/: query-88360c51d085865b33d27cce3b08585347a9e44da1b5a6ed80df786f1dfe6af6.json  query-db942f4d8c3afde9e409edec0ba26f29a5830b3a0fe07c7b0b7d0dc80d398a2a.json  query-e852a3a6c6518d47319f8e9b6e3563a6af3b933a531742163a0abf95b639301e.json
crates/api/migrations/: 20250717164446_add_pastes.down.sql  20250717164446_add_pastes.up.sql
crates/api/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
deploy/: api.Dockerfile
